# alleo-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/alleo/: __init__.py  _auth.py  _core.py  _pagination.py  async_client.py  client.py  errors.py  models.py
tests/: conftest.py  test_auth.py  test_client_async.py  test_client_sync.py  test_core_errors.py  test_core_request.py  test_core_retry.py  test_errors.py  test_models.py  test_pagination.py
